<resources>
    <string name="app_name">SeeFlix</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_bookmark">Bookmark</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_bookmark_title">My Bookmark</string>
    <string name="text_bookmark_empty">Bookmark still empty</string>
    <string name="text_info_banner">Info</string>
    <string name="text_share_banner">Share</string>
    <string name="text_now_playing_home">Now Playing</string>
    <string name="text_popular_home">Popular</string>
    <string name="text_upcoming_home">Upcoming Movies</string>
    <string name="text_top_rated_home">Top Rated</string>
    <string name="text_data_not_available">Data Not Available</string>
    <string name="title_list_movie_placeholder">Title List Movie</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="txt_name_film">Laskar Pelangi</string>
    <string name="txt_date">12/12/2020</string>
    <string name="txt_overview">Film Laskar Pelangi ini bercerita mengenai kehidupan anak-anak di desa Gantong, Pulau Belitung pada masa sekolahnya. Diawali dengan pembukaan sekolah di SD Muhammadiyah Gantong yang hanya dihadiri 9 orang, Bapak Harfan selaku kepala sekolah sempat ingin menyerah dan menutup sekolah. Namun Bu Muslimah sebagai salah satu pengajar di SD tersebut tidak patah semangat, iapun berinisiatif untuk mencari 1 lagi murid yang mendaftar. Hingga pada akhirnya, SD Muhammadiyah Gantong kedatangan 2 siswa baru bernama Harun dan Lintang, yaitu siswa dengan keterbatasan ekonomi namun kepintaran yang luar biasa.</string>
    <string name="txt_rating">3.5</string>
    <string name="txt_add_to_bookmark">Add to Bookmark</string>
    <string name="txt_share">Share</string>
    <string name="txt_add_bookmark">Tambahkan ke Bookmark</string>
    <string name="desc_iv_icon_back">desc_iv_icon_back\n</string>
    <string name="tv_share">Bagikan</string>
</resources>