<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/desc_iv_icon_back"
        android:src="@drawable/ic_back" />
    <ImageView
        android:id="@+id/iv_Backdrop"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_backdrop" />

    <ImageView
        android:id="@+id/iv_Poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-100dp"
        android:background="@drawable/bg_shape"
        android:scaleType="centerCrop"
        android:src="@drawable/img_poster_film" />

    <TextView
        android:id="@+id/Tv_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_name_film"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/tv_Date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_shape"
            android:text="@string/txt_date"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_shape"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star" />

            <TextView
                android:id="@+id/tv_Rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_rating"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Menggunakan ScrollView untuk membuat teks overview bisa di-scroll -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/tv_Overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_overview"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <!-- Tombol "Tambahkan ke Bookmark" dengan ikon -->
        <Button
            android:id="@+id/btn_add_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_shape"
            android:drawableStart="@drawable/ic_bookmark_add"
            android:text="@string/txt_add_bookmark"
            android:textAlignment="center"
            android:textSize="18sp" />

        <!-- Tombol "Bagikan" dengan ikon -->
        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_shape"
            android:drawableStart="@drawable/ic_share"
            android:text="@string/tv_share"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>
