<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/layout_banner_home"
            layout="@layout/layout_banner_home"
            android:layout_width="match_parent"
            android:layout_height="400dp"/>

        <TextView
            android:id="@+id/tv_now_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_now_playing_home"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_banner_home"/>

        <ImageView
            android:id="@+id/iv_list_grid_now_playing"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_list_grid_black"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_banner_home"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_now_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:clipToPadding="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_now_playing"
            tools:listitem="@layout/item_now_playing_home"/>

        <TextView
            android:id="@+id/tv_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_popular_home"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_now_playing"/>

        <ImageView
            android:id="@+id/iv_list_grid_popular"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_list_grid_black"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_now_playing"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:clipToPadding="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_popular"
            tools:listitem="@layout/item_popular_home"/>

        <TextView
            android:id="@+id/tv_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_upcoming_home"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_popular"/>

        <ImageView
            android:id="@+id/iv_list_grid_upcoming"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_list_grid_black"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_popular"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:clipToPadding="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_upcoming"
            tools:listitem="@layout/item_upcoming_home"/>

        <TextView
            android:id="@+id/tv_top_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_top_rated_home"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_upcoming"/>

        <ImageView
            android:id="@+id/iv_list_grid_top_rated"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_list_grid_black"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_upcoming"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_top_rated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:clipToPadding="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_top_rated"
            tools:listitem="@layout/item_top_rated_home"/>

        <include
            android:id="@+id/layout_state"
            layout="@layout/layout_content_state"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>